[gd_scene load_steps=9 format=3 uid="uid://d4nemf8oh53w"]

[ext_resource type="Script" path="res://src/scripts/Ground.gd" id="1_v0a0n"]
[ext_resource type="Script" path="res://src/scripts/Player.gd" id="2_pxw01"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(2980.5, 439.5)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1047, 1842)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(1071.25, 1800)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(671.298, 304.34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5mut"]
size = Vector2(107, 1504)

[sub_resource type="CapsuleShape2D" id="3"]
radius = 40.0
height = 160.0

[node name="Node2D" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D"]
position = Vector2(514, 598)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(938.75, 160.25)
shape = SubResource("1")
script = ExtResource("1_v0a0n")

[node name="StaticBody2D2" type="StaticBody2D" parent="Node2D"]
position = Vector2(3, 267)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2(-487.5, -178)
shape = SubResource("4")
script = ExtResource("1_v0a0n")

[node name="StaticBody2D3" type="StaticBody2D" parent="Node2D"]
position = Vector2(2911, 271)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D3"]
position = Vector2(505.375, -181)
shape = SubResource("5")
script = ExtResource("1_v0a0n")

[node name="StaticBody2D4" type="StaticBody2D" parent="Node2D"]
position = Vector2(457, 569)
rotation = -0.382227

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D4"]
position = Vector2(144.539, 176.66)
shape = SubResource("6")
script = ExtResource("1_v0a0n")

[node name="StaticBody2D5" type="StaticBody2D" parent="Node2D"]
position = Vector2(2616, 562)
rotation = -0.764454

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D5"]
position = Vector2(-31.9867, 26.1315)
rotation = 0.492183
shape = SubResource("6")
script = ExtResource("1_v0a0n")

[node name="StaticBody2D6" type="StaticBody2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D6"]
position = Vector2(2650, -572)
shape = SubResource("RectangleShape2D_d5mut")
script = ExtResource("1_v0a0n")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(2086, 273)
script = ExtResource("2_pxw01")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(0.75, 0.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("3")

[node name="TextEdit" type="TextEdit" parent="CharacterBody2D"]
offset_left = -48.0
offset_top = -128.0
offset_right = 49.0
offset_bottom = -92.0
metadata/_edit_use_anchors_ = true

[node name="RayCast2DLeft" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(-40, 0)
target_position = Vector2(-20, 0)

[node name="RayCast2DRight" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(40, 0)
target_position = Vector2(40, 0)

[node name="RayCast2DBottom" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(0, 80)
target_position = Vector2(0, 120)
